// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders with image 1`] = `
<View
  style={
    Object {
      "borderRadius": 20,
      "height": 40,
      "overflow": "hidden",
      "width": 40,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "http://www.fillmurray.com/200/300",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
</View>
`;

exports[`Avatar renders without image 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#C7CDD1",
      "borderRadius": 20,
      "borderWidth": 0.5,
      "height": 40,
      "justifyContent": "center",
      "marginRight": 16,
      "overflow": "hidden",
      "width": 40,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={undefined}
  >
    LL
  </Text>
</View>
`;
